LUA/ollama-k3s/nginx-ingress-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
